--- a/homedmanager.cabal
+++ b/homedmanager.cabal
@@ -1,13 +1,13 @@
-name:                homedmanager 
+name:                homedmanager
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/simple#readme
+homepage:            https://gitlab.com/ionutlupu1/homedmanager
 license:             BSD3
 license-file:        LICENSE
-author:              Ionuț Lupu 
+author:              Ionuț Lupu
 maintainer:          Ionuț Lupu
-copyright:           2017 Ionuț Lupu 
+copyright:           2017 Ionuț Lupu
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
@@ -30,10 +30,10 @@ test-suite simple-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  build-depends:       base, homedmanager
+  build-depends:       base, homedmanager, HUnit
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/simple
+  location: https://gitlab.com/ionutlupu1/homedmanager
