--- a/homedmanager.cabal
+++ b/homedmanager.cabal
@@ -15,15 +15,15 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib,Config,Cmd
-  build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson
+  exposed-modules:     Lib,Config,Cmd,Auth,Fs
+  build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson, http-conduit, bytestring
   default-language:    Haskell2010
 
 executable homedmanager-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base, homedmanager, directory, unix
+  build-depends:       base, homedmanager, directory, unix, aeson
   default-language:    Haskell2010
 
 test-suite simple-test
