--- a/homedmanager.cabal
+++ b/homedmanager.cabal
@@ -6,7 +6,7 @@ homepage:            https://gitlab.com/ionutlupu1/homedmanager
 license:             BSD3
 license-file:        LICENSE
 author:              Ionuț Lupu
-maintainer:          Ionuț Lupu
+maintainer:          lupu.ionut@protonmail.ch
 copyright:           2017 Ionuț Lupu
 category:            Web
 build-type:          Simple
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib,Config,Cmd,Auth,Fs
+  exposed-modules:     Config,Cmd,Fs,Auth
   build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson, http-conduit, bytestring
   default-language:    Haskell2010
 
