--- a/homedmanager.cabal
+++ b/homedmanager.cabal
@@ -2,7 +2,7 @@ name:                homedmanager
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://gitlab.com/ionutlupu1/homedmanager
+homepage:            https://github.com/lupuionut/homedmanager
 license:             BSD3
 license-file:        LICENSE
 author:              Ionuț Lupu
@@ -14,9 +14,10 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  hs-source-dirs:      src
-  exposed-modules:     Config,Cmd,Fs,Auth,Api
-  build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson, http-conduit, bytestring
+  hs-source-dirs:      src 
+  exposed-modules:     Config,Cmd,Fs,Auth,Api, Api.Responses
+  build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson,
+                        http-conduit, bytestring, base64-string
   default-language:    Haskell2010
 
 executable homedmanager-exe
@@ -36,4 +37,4 @@ test-suite simple-test
 
 source-repository head
   type:     git
-  location: https://gitlab.com/ionutlupu1/homedmanager
+  location: https://github.com/lupuionut/homedmanager
