--- a/homedmanager.cabal
+++ b/homedmanager.cabal
@@ -15,9 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src 
-  exposed-modules:     Config,Cmd,Fs,Auth,Api, Api.Responses
+  exposed-modules:     Config,Cmd,Fs,Auth,Api, Api.Request
   build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson,
-                        http-conduit, bytestring, base64-string
+                        http-conduit, bytestring, base64-string, http-types
   default-language:    Haskell2010
 
 executable homedmanager-exe
