--- a/homedmanager.cabal
+++ b/homedmanager.cabal
@@ -17,7 +17,8 @@ library
   hs-source-dirs:      src 
   exposed-modules:     Config,Cmd,Fs,Auth,Api, Api.Request
   build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson,
-                        http-conduit, bytestring, base64-string, http-types
+                        http-conduit, bytestring, base64-string, http-types,
+                        filepath
   default-language:    Haskell2010
 
 executable homedmanager-exe
