--- a/homedmanager.cabal
+++ b/homedmanager.cabal
@@ -18,7 +18,7 @@ library
   exposed-modules:     Config,Cmd,Fs,Auth,Api, Api.Request
   build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson,
                         http-conduit, bytestring, base64-string, http-types,
-                        filepath
+                        filepath, utf8-string
   default-language:    Haskell2010
 
 executable homedmanager-exe
