--- a/homedmanager.cabal
+++ b/homedmanager.cabal
@@ -16,9 +16,10 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Config,Cmd,Fs,Auth,Api, Api.Request, Api.PostRequest
+  other-modules:       Api.Response
   build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson,
                         http-conduit, bytestring, base64-string, http-types,
-                        filepath, utf8-string
+                        filepath, utf8-string, text
   default-language:    Haskell2010
 
 executable homedmanager-exe
