--- a/homedmanager.cabal
+++ b/homedmanager.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Config,Cmd,Fs,Auth,Api
-  other-modules:       Api.Types
+  other-modules:       Api.Types, Print
   build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson,
                         http-conduit, bytestring, base64-string, http-types,
                         filepath, utf8-string, text
